src/test/ui/const-generics/issues/issue-71381.stderr
error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/issue-71381.rs:13:82
   |
LL |     pub fn call_me<Args: Sized, const IDX: usize, const FN: unsafe extern "C" fn(Args)>(&self) {
   |                                                                                  ^^^^ const parameters must have a concrete type

error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/issue-71381.rs:22:40
   |
LL |         const FN: unsafe extern "C" fn(Args),
   |                                        ^^^^ const parameters must have a concrete type

error: using function pointers as const generic parameters is forbidden
  --> $DIR/issue-71381.rs:13:61
   |
LL |     pub fn call_me<Args: Sized, const IDX: usize, const FN: unsafe extern "C" fn(Args)>(&self) {
   |                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: using function pointers as const generic parameters is forbidden
  --> $DIR/issue-71381.rs:22:19
   |
LL |         const FN: unsafe extern "C" fn(Args),
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

